Further website updates

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1094,7 +1094,7 @@ table tfoot td {
           transform: scale(1.2);
 }
 
-footer .copyright {
+footer .about {
   font-size: 14px;
   text-align: center;
   margin: 0;
@@ -1446,7 +1446,7 @@ a.newer-posts:hover {
         -ms-flex-align: stretch;
             align-items: stretch;
   }
-  .contact-title, .copyright {
+  .contact-title, .about {
     display: none;
   }
 }
